# AI_reservation

./: .gitignore  CLAUDE.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260422_1245_8c5d604ee81d_extensions_and_enums.py  20260425_0156_858813776375_create_all_17_tables.py
backend/app/: config.py  main.py
backend/app/core/: __init__.py  database.py  encryption.py  permissions.py  security.py
backend/app/integrations/: __init__.py  embeddings.py  llm.py  resend_email.py
backend/app/models/: __init__.py  audit_log.py  base.py  booking.py  business.py  business_setting.py  conversation.py  customer.py  embedding.py  enums.py  escalation.py  faq.py  message.py  operating_hours.py  payment.py  platform_setting.py  schedule_exception.py  service.py  user.py  webhook_event.py
backend/app/routers/: __init__.py  auth.py  chat.py
backend/app/routers/admin/: __init__.py  (+4 more)
backend/app/schemas/: __init__.py  auth.py  business.py  chat.py  hours_faqs.py
backend/app/services/: __init__.py  auth_service.py  booking_flow.py  chat_graph.py  conversation_store.py  date_parser.py  embedding_sync.py  rag.py  slot_finder.py
backend/scripts/: backfill_embeddings.py  check_bookings.py  check_state.py  create_super_admin.py  fix_demo_data.py  seed_demo_data.py  set_escalation_email.py  verify_chat.py  verify_db_session.py  verify_demo_data.py  verify_embeddings.py  verify_rag.py  verify_tables.py
backend/tests/: __init__.py  conftest.py  test_admin_hours_faqs.py  test_admin_services.py  test_auth.py
(+28 files in other folders)
